[project]
name = "riskmanaged-gateway"
version = "0.1.0"
description = "RiskManaged.io Gateway — Connect your exchange to the RiskManaged platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "RiskManaged", email = "support@riskmanaged.io"},
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0",
    "websockets>=12.0",
    "ccxt>=4.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
]

[project.scripts]
riskmanaged-gateway = "gateway.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gateway"]